fix footer spacing

--- a/src/views/search/components/search-footer.module.scss
+++ b/src/views/search/components/search-footer.module.scss
@@ -8,6 +8,7 @@
 	gap: .5em;
 	align-items: center;
 	justify-content: center;
+	margin: var(--spc-4x) 0;
 
 	text-decoration: none;
 	color: var(--foreground_emphasis-high);
